--- a/app/src/main/res/layout/activity_login_manual.xml
+++ b/app/src/main/res/layout/activity_login_manual.xml
@@ -48,7 +48,7 @@
         android:layout_marginLeft="8dp"
         android:layout_marginRight="8dp"
         android:layout_marginStart="8dp"
-        android:layout_marginTop="40dp"
+        android:layout_marginTop="16dp"
         android:background="@drawable/boton_circular_rojo"
         android:foreground="?android:attr/selectableItemBackground"
         android:text="@string/entrar"
@@ -86,122 +86,153 @@
         android:inputType="none"
         android:maxLength="5"
         android:singleLine="true"
-        android:textSize="18dp"
+        android:textColor="@android:color/white"
+        android:textSize="30sp"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintRight_toRightOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/txtNumeroEmpleado" />
 
     <Button
         android:id="@+id/btnCero"
-        style="@style/botonTeclado"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
+        android:layout_width="80dp"
+        android:layout_height="80dp"
+        android:layout_marginLeft="8dp"
+        android:layout_marginRight="8dp"
+        android:layout_marginTop="8dp"
+        android:background="@drawable/boton_teclado"
         android:text="0"
-        app:layout_constraintTop_toBottomOf="@+id/btnSiete"
-        android:layout_marginTop="0dp"
-        app:layout_constraintRight_toLeftOf="@+id/btnNueve"
-        android:layout_marginRight="0dp"
-        android:layout_marginLeft="0dp"
-        app:layout_constraintLeft_toLeftOf="@+id/btnOcho" />
+        android:textColor="@android:color/white"
+        android:textSize="40sp"
+        app:layout_constraintLeft_toLeftOf="parent"
+        app:layout_constraintRight_toRightOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/btnSiete" />
 
     <Button
         android:id="@+id/btnUno"
-        style="@style/botonTeclado"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
+        android:layout_width="80dp"
+        android:layout_height="80dp"
+        android:layout_marginRight="16dp"
         android:layout_marginTop="24dp"
+        android:background="@drawable/boton_teclado"
         android:text="1"
+        android:textColor="@android:color/white"
+        android:textSize="40sp"
         app:layout_constraintRight_toLeftOf="@+id/btnDos"
-        app:layout_constraintTop_toBottomOf="@+id/edtNumeroEmpleado"
-        android:layout_marginRight="0dp" />
+        app:layout_constraintTop_toBottomOf="@+id/edtNumeroEmpleado" />
 
     <Button
         android:id="@+id/btnDos"
-        style="@style/botonTeclado"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
+        android:layout_width="80dp"
+        android:layout_height="80dp"
+        android:layout_marginEnd="8dp"
         android:layout_marginLeft="8dp"
         android:layout_marginRight="8dp"
+        android:layout_marginStart="8dp"
         android:layout_marginTop="24dp"
+        android:background="@drawable/boton_teclado"
         android:text="2"
+        android:textColor="@android:color/white"
+        android:textSize="40sp"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintRight_toRightOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/edtNumeroEmpleado"
-        android:layout_marginStart="8dp"
-        android:layout_marginEnd="8dp" />
+        app:layout_constraintTop_toBottomOf="@+id/edtNumeroEmpleado" />
 
     <Button
         android:id="@+id/btnTres"
-        style="@style/botonTeclado"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
+        android:layout_width="80dp"
+        android:layout_height="80dp"
+        android:layout_marginLeft="16dp"
         android:layout_marginTop="24dp"
+        android:background="@drawable/boton_teclado"
         android:text="3"
+        android:textColor="@android:color/white"
+        android:textSize="40sp"
         app:layout_constraintLeft_toRightOf="@+id/btnDos"
-        app:layout_constraintTop_toBottomOf="@+id/edtNumeroEmpleado"
-        android:layout_marginLeft="0dp" />
+        app:layout_constraintTop_toBottomOf="@+id/edtNumeroEmpleado" />
 
     <Button
         android:id="@+id/btnCuatro"
-        style="@style/botonTeclado"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
+        android:layout_width="80dp"
+        android:layout_height="80dp"
+        android:layout_marginRight="16dp"
+        android:layout_marginTop="8dp"
+        android:background="@drawable/boton_teclado"
         android:text="4"
+        android:textColor="@android:color/white"
+        android:textSize="40sp"
         app:layout_constraintRight_toLeftOf="@+id/btnCinco"
         app:layout_constraintTop_toBottomOf="@+id/btnUno" />
 
     <Button
         android:id="@+id/btnCinco"
-        style="@style/botonTeclado"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
+        android:layout_width="80dp"
+        android:layout_height="80dp"
+        android:layout_marginEnd="8dp"
         android:layout_marginLeft="8dp"
         android:layout_marginRight="8dp"
+        android:layout_marginStart="8dp"
+        android:layout_marginTop="8dp"
+        android:background="@drawable/boton_teclado"
         android:text="5"
+        android:textColor="@android:color/white"
+        android:textSize="40sp"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintRight_toRightOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/btnDos"
-        android:layout_marginStart="8dp"
-        android:layout_marginEnd="8dp" />
+        app:layout_constraintTop_toBottomOf="@+id/btnDos" />
 
     <Button
         android:id="@+id/btnSeis"
-        style="@style/botonTeclado"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
+        android:layout_width="80dp"
+        android:layout_height="80dp"
+        android:layout_marginLeft="16dp"
+        android:layout_marginTop="8dp"
+        android:background="@drawable/boton_teclado"
         android:text="6"
+        android:textColor="@android:color/white"
+        android:textSize="40sp"
         app:layout_constraintLeft_toRightOf="@+id/btnCinco"
         app:layout_constraintTop_toBottomOf="@+id/btnTres" />
 
     <Button
         android:id="@+id/btnSiete"
-        style="@style/botonTeclado"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
+        android:layout_width="80dp"
+        android:layout_height="80dp"
+        android:layout_marginRight="16dp"
+        android:layout_marginTop="8dp"
+        android:background="@drawable/boton_teclado"
         android:text="7"
+        android:textColor="@android:color/white"
+        android:textSize="40sp"
         app:layout_constraintRight_toLeftOf="@+id/btnOcho"
         app:layout_constraintTop_toBottomOf="@+id/btnCuatro" />
 
     <Button
         android:id="@+id/btnOcho"
-        style="@style/botonTeclado"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
+        android:layout_width="80dp"
+        android:layout_height="80dp"
+        android:layout_marginEnd="8dp"
         android:layout_marginLeft="8dp"
         android:layout_marginRight="8dp"
+        android:layout_marginStart="8dp"
+        android:layout_marginTop="8dp"
+        android:background="@drawable/boton_teclado"
         android:text="8"
+        android:textColor="@android:color/white"
+        android:textSize="40sp"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintRight_toRightOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/btnCinco"
-        android:layout_marginStart="8dp"
-        android:layout_marginEnd="8dp" />
+        app:layout_constraintTop_toBottomOf="@+id/btnCinco" />
 
     <Button
         android:id="@+id/btnNueve"
-        style="@style/botonTeclado"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
+        android:layout_width="80dp"
+        android:layout_height="80dp"
+        android:layout_marginLeft="16dp"
+        android:layout_marginTop="8dp"
+        android:background="@drawable/boton_teclado"
         android:text="9"
+        android:textColor="@android:color/white"
+        android:textSize="40sp"
         app:layout_constraintLeft_toRightOf="@+id/btnOcho"
         app:layout_constraintTop_toBottomOf="@+id/btnSeis" />
 
@@ -213,6 +244,7 @@
         android:layout_marginRight="0dp"
         android:layout_marginTop="0dp"
         android:background="@drawable/ic_backspace"
+        android:backgroundTint="@color/icons2"
         app:layout_constraintBottom_toBottomOf="@+id/edtNumeroEmpleado"
         app:layout_constraintRight_toRightOf="@+id/edtNumeroEmpleado"
         app:layout_constraintTop_toTopOf="@+id/edtNumeroEmpleado" />
@@ -234,22 +266,6 @@
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintRight_toRightOf="parent"
         app:layout_constraintTop_toTopOf="@+id/imgFondoInstruccion" />
-
-    <ImageView
-        android:id="@+id/imgPortadaManual"
-        android:layout_width="0dp"
-        android:layout_height="0dp"
-        android:layout_marginLeft="32dp"
-        android:layout_marginRight="32dp"
-        android:layout_marginTop="8dp"
-        app:layout_constraintLeft_toLeftOf="parent"
-        app:layout_constraintRight_toRightOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/btnCerrar"
-        app:srcCompat="@drawable/im_logo_penia"
-        app:layout_constraintHorizontal_bias="0.1"
-        android:layout_marginBottom="8dp"
-        app:layout_constraintBottom_toTopOf="@+id/imgLogoManual"
-        app:layout_constraintVertical_bias="0.0" />
 
     <Button
         android:id="@+id/btnCerrar"
